@@ -1,0 +1,21 @@
+/*
+ * Translated default messages for the jQuery validation plugin.
+ * Language: SK
+ * Skipped dateISO/DE, numberDE
+ */
+jQuery.extend(jQuery.validator.messages, {
+	required: "Povinné zadať.",
+	maxlength: jQuery.format("Maximálne {0} znakov."),
+	minlength: jQuery.format("Minimálne {0} znakov."),
+	rangelength: jQuery.format("Minimálne {0} a Maximálne {0} znakov."),
+	email: "E-mailová adresa musí byť platná.",
+	url: "URL musí byť platný.",
+	date: "Musí byť dátum.",
+	number: "Musí byť číslo.",
+	digits: "Môže obsahovať iba číslice.",
+	equalTo: "Dva hodnoty sa musia rovnať.",
+	range: jQuery.format("Musí byť medzi {0} a {1}."),
+	max: jQuery.format("Nemôže byť viac ako{0}."),
+	min: jQuery.format("Nemôže byť menej ako{0}."),
+	creditcard: "Číslo platobnej karty musí byť platné."
+});
